#7871 In static width mode, choices with a long text overlaps a question's area (#7877)
* #7871 In static width mode, choices with a long text overlaps a question's area
Fixes #7871

* #7871 In static width mode, choices with a long text overlaps a question's area
Fixes #7871

* In static width mode, choices with a long text overlaps a question's area #7871

---------

Co-authored-by: Aleksey Novikov <novikov@abrisplatform.com>

--- a/src/defaultV2-theme/blocks/sd-selectbase.scss
+++ b/src/defaultV2-theme/blocks/sd-selectbase.scss
@@ -26,6 +26,7 @@
   position: relative;
   gap: calcSize(1);
   vertical-align: top;
+  max-width: 100%;
 }
 
 .sd-selectbase__column {
@@ -36,6 +37,7 @@
   display: block;
   box-sizing: border-box;
   flex: 1 1 0px;
+  min-width: 0;
 }
 
 .sd-selectbase__column:not(:last-child) {
