--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -7,19 +7,34 @@
   -webkit-user-select: none;
 }
 
-$ranking-animation-duration: 50ms;
-
 .sv-ranking-item {
   cursor: pointer;
   position: relative;
   height: calcSize(6);
   opacity: 1;
-  transition: height $ranking-animation-duration, opacity $ranking-animation-duration;
 }
 
 .sv-ranking-item--animate-item-removing {
   height: 0px;
   opacity: 0;
+  animation: sv-animate-item-removing-keyframes $ranking-animation-duration;
+}
+
+@keyframes sv-animate-item-removing-keyframes {
+  0% {
+    height: calcSize(6);
+    opacity: 1;
+  }
+
+  50% {
+    height: calcSize(6);
+    opacity: 0;
+  }
+
+  100% {
+    height: 0px;
+    opacity: 0;
+  }
 }
 
 .sv-ranking-item--animate-item-adding {
@@ -29,6 +44,11 @@ $ranking-animation-duration: 50ms;
 @keyframes sv-animate-item-adding-keyframes {
   0% {
     height: 0px;
+    opacity: 0;
+  }
+
+  50% {
+    height: calcSize(6);
     opacity: 0;
   }
 
