--- a/packages/survey-angular-ui/src/page.component.html
+++ b/packages/survey-angular-ui/src/page.component.html
@@ -6,7 +6,7 @@
         <sv-ng-string [model]="model.locDescription"></sv-ng-string>
       </div>
       <div *ngIf="model.hasVisibleErrors" [element]="model" sv-ng-errors></div>
-      <ng-container *ngFor="let row of model.rows">
+      <ng-container *ngFor="let row of model.visibleRows">
         <ng-template [component]="{ name: $any(model.survey).getRowWrapperComponentName(row), data: { componentData: $any(model.survey).getRowWrapperComponentData(row) } }">
           <sv-ng-row [row]="row"></sv-ng-row>
         </ng-template>
