--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -79,7 +79,7 @@
   white-space: nowrap;
   flex-shrink: 0;
 
-  &+span {
+  & + span {
     float: left;
     width: 0;
   }
@@ -141,4 +141,124 @@
   border-radius: $panel-corner-radius;
   box-shadow: none;
   background-color: transparent;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    height: 0;
+  }
+  50% {
+    opacity: 0;
+    height: var(--animation-height);
+  }
+  100% {
+    height: var(--animation-height);
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation-name: fadeIn;
+  min-height: 0 !important;
+  animation-duration: 0.5s;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+    height: var(--animation-height);
+  }
+  50% {
+    opacity: 0;
+    height: var(--animation-height);
+  }
+  100% {
+    opacity: 0;
+    height: 0;
+  }
+}
+
+.fadeOut {
+  animation-name: fadeOut;
+  min-height: 0 !important;
+  animation-duration: 5s;
+}
+.fadeIn .elementFadeIn {
+  animation: none;
+}
+
+.fadeOut .elementFadeOut {
+  animation: none;
+}
+
+@keyframes elementFadeIn {
+  0% {
+    opacity: 0;
+    flex-basis: 0;
+    max-width: 0;
+    min-width: 0;
+    width: 0;
+    height: var(--animation-height);
+    max-height: var(--animation-height);
+    min-height: var(--animation-height);
+  }
+  50% {
+    opacity: 0;
+    height: var(--animation-height);
+    max-height: var(--animation-height);
+    min-height: var(--animation-height);
+    height: var(--animation-height);
+    flex-basis: var(--animation-width);
+    width: var(--animation-width);
+    min-width: var(--animation-width);
+  }
+  100% {
+    width: var(--animation-width);
+    height: var(--animation-height);
+    max-height: var(--animation-height);
+    min-height: var(--animation-height);
+    min-width: var(--animation-width);
+    flex-basis: var(--animation-width);
+    opacity: 1;
+  }
+}
+
+.elementFadeIn {
+  animation-name: elementFadeIn;
+  flex-shrink: 0;
+  animation-duration: 1s;
+}
+
+@keyframes elementFadeOut {
+  0% {
+    opacity: 1;
+    height: var(--animation-height);
+    flex-basis: var(--animation-width);
+    min-width: var(--animation-width);
+  }
+  50% {
+    opacity: 0;
+    height: var(--animation-height);
+    flex-basis: var(--animation-width);
+    min-width: var(--animation-width);
+  }
+  100% {
+    height: var(--animation-height);
+    opacity: 0;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: 0;
+    min-width: 0;
+  }
+}
+
+.elementFadeOut {
+  animation-name: elementFadeOut;
+  animation-duration: 1s;
+  overflow: hidden;
+}
+
+.hidden {
+  display: none;
 }
