--- a/src/knockout/templates/row.html
+++ b/src/knockout/templates/row.html
@@ -1,12 +1,12 @@
 <script type="text/html" id="survey-row">
-  <div data-bind="css: row.getRowCss()">
+  <div data-bind="css: row.getRowCss(), attr: { id: row.id }">
     <!-- ko template: { name: "survey-row-content", afterRender: row.rowAfterRender } -->
     <!-- /ko -->
   </div>
 </script>
 <script type="text/html" id="survey-row-content">
 <!-- ko foreach: { data: row.visibleElements, as: 'question', afterRender: row.koAfterRender } -->
-  <div data-bind="css: question.cssClasses.questionWrapper, style: $data.rootStyle">
+  <div data-bind="css: question.cssClasses.questionWrapper, style: $data.rootStyle, attr: { 'data-wrap': question.id  }">
   <!-- ko if: row.isNeedRender -->
     <!-- ko component: { name: row.panel.survey.getElementWrapperComponentName(question), params: { componentData:  row.panel.survey.getElementWrapperComponentData(question), templateData: { name: question.koElementType, data: question, afterRender: $parent.koElementAfterRender } } } -->
     <!-- /ko -->
