--- a/src/defaultV2-theme/blocks/sd-progress-buttons.scss
+++ b/src/defaultV2-theme/blocks/sd-progress-buttons.scss
@@ -51,13 +51,13 @@
       display: block;
       content: "";
       height: calcSize(0.25);
-      background-color: $foreground-dim-light;
-      opacity: 0.5;
+      background-color: $navigation;
+      // opacity: 0.5;
       position: absolute;
       bottom: calcSize(1.375);
       // right: 50%;
       right: calc(50% + 6px);
-      width: calc(100% - 12px);
+      width: calc(100% - 6px);
       pointer-events: none;
     }
 
@@ -68,7 +68,7 @@
       height: calcSize(0);
       margin: calcSize(0.75);
       border: calcSize(0.75) solid transparent;
-      background-color: $border-inside;
+      background-color: $navigation;
       // opacity: 0.5;
       border-radius: 50%;
       align-self: center;
@@ -183,7 +183,7 @@
       &:not(:first-child)>.sd-progress-buttons__connector {
         bottom: calcSize(2.375);
         right: calc(50% + 14px);
-        width: calc(100% - 28px);
+        width: calc(100% - 14px);
       }
 
       &:after {
