Fix matrix's row text show twice in modern, default theme

--- a/src/main.m600.scss
+++ b/src/main.m600.scss
@@ -46,6 +46,11 @@
                     content: attr(data-responsive-title);
                   }
                 }
+                .sv-table__cell--row-text {
+                  &::before {
+                    content: none;
+                  }
+                }
               }
 
               table.sv_q_matrix {
