--- a/src/modern.m600.scss
+++ b/src/modern.m600.scss
@@ -43,6 +43,11 @@
                     content: attr(data-responsive-title);
                   }
                 }
+                .sv-table__cell--row-text {
+                  &:before {
+                    content: none;
+                  }
+                }
               }
 
               table.sv-matrix-root {
