work for the https://github.com/surveyjs/private-tasks/issues/363

--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -327,6 +327,14 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
     stroke: transparent;
     fill: $primary;
   }
+
+  @for $i from 1 through 25 {
+    &:nth-child(#{$i}) {
+      svg {
+        transition-delay: #{($i - 1) * 25}ms;
+      }
+    }
+  }
 }
 
 .sd-rating__item-star--error {
