--- a/src/common-styles/sv-list.scss
+++ b/src/common-styles/sv-list.scss
@@ -165,6 +165,11 @@ li:focus .sv-list__item.sv-list__item--selected {
   white-space: nowrap;
 }
 
+.sv-list__item-text--wrap span {
+  white-space: normal;
+  word-wrap: break-word;
+}
+
 .sv-list__container {
   position: relative;
   display: flex;
