--- a/src/defaultV2-theme/blocks/sd-tagbox.scss
+++ b/src/defaultV2-theme/blocks/sd-tagbox.scss
@@ -34,6 +34,9 @@
   padding: calcSize(1) calcSize(1.5);
   background-color: $primary;
   border-radius: calcCornerRadius(0.5);
+
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .sv-tagbox__item-text {
@@ -41,6 +44,12 @@
   min-width: calcSize(5.5);
   text-align: center;
   font-weight: 600;
+
+  span {
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
 }
 
 .sv-tagbox__item:hover,
