--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -10,10 +10,14 @@ $secondary-backcolor-semi-light: var(--sjs-secondary-backcolor-semi-light, rgba(
 $secondary-forecolor: var(--sjs-secondary-forecolor, #fff);
 $secondary-forecolor-light: var(--sjs-secondary-forecolor-light, rgba(#fff, 0.25));
 
-$editor-background: var(--sjs-editorpanel-backcolor,
-    var(--sjs-editor-background, var(--sjs-general-backcolor-dim-light, var(--background-dim-light, #f9f9f9))));
-$question-background: var(--sjs-questionpanel-backcolor,
-    var(--sjs-question-background, var(--sjs-general-backcolor, var(--background, #fff))));
+$editor-background: var(
+  --sjs-editorpanel-backcolor,
+  var(--sjs-editor-background, var(--sjs-general-backcolor-dim-light, var(--background-dim-light, #f9f9f9)))
+);
+$question-background: var(
+  --sjs-questionpanel-backcolor,
+  var(--sjs-question-background, var(--sjs-general-backcolor, var(--background, #fff)))
+);
 
 $background: var(--sjs-general-backcolor, var(--background, #fff));
 $background-dim: var(--sjs-general-backcolor-dim, var(--background-dim, #f3f3f3));
@@ -83,28 +87,39 @@ $font-pagetitle-color: var(--sjs-font-pagetitle-color, var(--sjs-general-dim-for
 
 $font-pagedescription-family: var(--sjs-font-pagedescription-family, #{$font-family});
 $font-pagedescription-weight: var(--sjs-font-pagedescription-weight, 400);
-$font-pagedescription-color: var(--sjs-font-pagedescription-color,
-    var(--sjs-general-dim-forecolor-light, rgba(0, 0, 0, 0.45)));
+$font-pagedescription-color: var(
+  --sjs-font-pagedescription-color,
+  var(--sjs-general-dim-forecolor-light, rgba(0, 0, 0, 0.45))
+);
 $font-pagedescription-size: var(--sjs-font-pagedescription-size, $font-size);
 
 $font-questiontitle-family: var(--sjs-font-questiontitle-family, #{$font-family});
 $font-questiontitle-weight: var(--sjs-font-questiontitle-weight, 600);
-$font-questiontitle-color: var(--sjs-font-questiontitle-color,
-    var(--sjs-general-forecolor, var(--foreground, #161616)));
+$font-questiontitle-color: var(
+  --sjs-font-questiontitle-color,
+  var(--sjs-general-forecolor, var(--foreground, #161616))
+);
 $font-questiontitle-size: var(--sjs-font-questiontitle-size, $font-size);
 
 $font-questiondescription-family: var(--sjs-font-questiondescription-family, #{$font-family});
 $font-questiondescription-weight: var(--sjs-font-questiondescription-weight, 400);
-$font-questiondescription-color: var(--sjs-font-questiondescription-color,
-    var(--sjs-general-forecolor-light, rgba(0, 0, 0, 0.45)));
+$font-questiondescription-color: var(
+  --sjs-font-questiondescription-color,
+  var(--sjs-general-forecolor-light, rgba(0, 0, 0, 0.45))
+);
 $font-questiondescription-size: var(--sjs-font-questiondescription-size, $font-size);
-$font-questionplaceholder-color: var(--sjs-font-questiondescription-color,
-    var(--sjs-general-forecolor-light, rgba(0, 0, 0, 0.45)));
+$font-questionplaceholder-color: var(
+  --sjs-font-questiondescription-color,
+  var(--sjs-general-forecolor-light, rgba(0, 0, 0, 0.45))
+);
 
 $font-editorfont-family: var(--sjs-font-editorfont-family, #{$font-family});
 $font-editorfont-weight: var(--sjs-font-editorfont-weight, 400);
 $font-editorfont-color: var(--sjs-font-editorfont-color, var(--sjs-general-forecolor, rgba(0, 0, 0, 0.91)));
-$font-editorfont-placeholdercolor: var(--sjs-font-editorfont-placeholdercolor, var(--sjs-general-forecolor-light, var(--foreground-light, #909090)));
+$font-editorfont-placeholdercolor: var(
+  --sjs-font-editorfont-placeholdercolor,
+  var(--sjs-general-forecolor-light, var(--foreground-light, #909090))
+);
 $font-default-editorfont-size: var(--sjs-font-editorfont-size, $font-size);
 $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
 
@@ -116,10 +131,11 @@ $sd-panel-medium-min-width: 176px;
 
 :root {
   --sjs-transition-duration: 150ms;
-  --sjs-ranking-animation-duration: 1000ms;
+  --sjs-ranking-animation-duration: 5000ms;
 }
 $transition-duration: var(--sjs-transition-duration, 150ms);
 $ranking-animation-duration: var(--sjs-ranking-animation-duration, 50ms);
+$transition-duration: var(--sjs-transition-duration, 150ms);
 
 @mixin useEditorFontSize {
   --sjs-internal-font-editorfont-size: var(--sjs-mobile-font-editorfont-size, #{$font-default-editorfont-size});
@@ -129,9 +145,7 @@ $ranking-animation-duration: var(--sjs-ranking-animation-duration, 50ms);
   @if $a ==1 {
     $result: #{$b};
     @return $result;
-  }
-
-  @else {
+  } @else {
     $result: calc(#{$a} * (#{$b}));
     @return $result;
   }
@@ -141,9 +155,7 @@ $ranking-animation-duration: var(--sjs-ranking-animation-duration, 50ms);
   @if $multiplier ==1 {
     $result: #{$base-unit};
     @return $result;
-  }
-
-  @else {
+  } @else {
     $result: calc(#{$multiplier} * (#{$base-unit}));
     @return $result;
   }
@@ -153,9 +165,7 @@ $ranking-animation-duration: var(--sjs-ranking-animation-duration, 50ms);
   @if $multiplier ==1 {
     $result: #{$font-size};
     @return $result;
-  }
-
-  @else {
+  } @else {
     $result: calc(#{$multiplier} * (#{$font-size}));
     @return $result;
   }
@@ -165,9 +175,7 @@ $ranking-animation-duration: var(--sjs-ranking-animation-duration, 50ms);
   @if $multiplier ==1 {
     $result: #{$font-size};
     @return $result;
-  }
-
-  @else {
+  } @else {
     $result: calc(#{$multiplier} * (#{$font-size}));
     @return $result;
   }
@@ -177,9 +185,7 @@ $ranking-animation-duration: var(--sjs-ranking-animation-duration, 50ms);
   @if $multiplier ==1 {
     $result: #{$corner-radius};
     @return $result;
-  }
-
-  @else {
+  } @else {
     $result: calc(#{$multiplier} * (#{$corner-radius}));
     @return $result;
   }
