--- a/packages/survey-angular-ui/src/errors.component.html
+++ b/packages/survey-angular-ui/src/errors.component.html
@@ -1,8 +1,10 @@
 <div *ngFor="let error of element.errors;">
+  <div>
   <span
     [class]="element.cssClasses ? element.cssClasses.error.icon : 'panel-error-icon'"
     aria-hidden="true"
   ></span>
   <span [class]="element.cssClasses ? element.cssClasses.error.item : 'panel-error-item'" [model]="error.locText" sv-ng-string>
   </span>
+  </div>
 </div>
