--- a/src/knockout/templates/question-errors.html
+++ b/src/knockout/templates/question-errors.html
@@ -1,14 +1,16 @@
 ﻿<script type="text/html" id="survey-question-errors">
-        <!-- ko if: hasVisibleErrors -->
-            <div role="alert" aria-live="polite" data-bind="visible: hasVisibleErrors, foreach: { data: errors, as: 'error' }, css: cssError, attr: { id: question.id + '_errors' }">
-            <!-- ko if: error.visible -->
-            <div>   
+    <!-- ko if: hasVisibleErrors -->
+    <div role="alert" aria-live="polite" data-bind="visible: hasVisibleErrors, foreach: { data: errors, as: 'error' }, css: cssError, attr: { id: question.id + '_errors' }">
+        <!-- ko if: error.visible -->
+        <div>
+            <div>
                 <span aria-hidden="true" data-bind="css: question.cssClasses.error.icon"></span>
                 <span data-bind="css: question.cssClasses.error.item">
                     <!-- ko template: { name: 'survey-string', data: error.locText } --><!-- /ko -->
                 </span>
             </div>
-            <!-- /ko -->
         </div>
         <!-- /ko -->
+    </div>
+    <!-- /ko -->
 </script>
