HTML Question type base class is not visible in Contrast Dark Theme Fixes #7223

--- a/packages/survey-angular-ui/src/questions/html.component.html
+++ b/packages/survey-angular-ui/src/questions/html.component.html
@@ -1,1 +1,1 @@
-<div [class]="model.renderCssRoot" [innerHTML]="model.locHtml.renderedHtml | safeHtml" #contentElement></div>
+<div [class]="model.cssRoot" [innerHTML]="model.locHtml.renderedHtml | safeHtml" #contentElement></div>
