--- a/src/defaultV2-theme/mixins.scss
+++ b/src/defaultV2-theme/mixins.scss
@@ -28,6 +28,7 @@
 }
 
 @mixin articleXXLargeFont {
+  color: $font-questiontitle-color;
   font-size: var(--sjs-article-font-xx-large-fontSize, calc(4 * (#{$font-size})));
   text-decoration: var(--sjs-article-font-xx-large-textDecoration, "none");
   font-family: $font-family;
@@ -41,6 +42,7 @@
 }
 
 @mixin articleXLargeFont {
+  color: $font-questiontitle-color;
   font-size: var(--sjs-article-font-x-large-fontSize, calc(3 * (#{$font-size})));
   text-decoration: var(--sjs-article-font-x-large-textDecoration, "none");
   font-family: $font-family;
@@ -54,6 +56,7 @@
 }
 
 @mixin articleLargeFont {
+  color: $font-questiontitle-color;
   font-size: var(--sjs-article-font-large-fontSize, calc(2 * (#{$font-size})));
   text-decoration: var(--sjs-article-font-large-textDecoration, "none");
   font-family: $font-family;
@@ -67,6 +70,7 @@
 }
 
 @mixin articleMediumFont {
+  color: $font-questiontitle-color;
   font-size: var(--sjs-article-font-medium-fontSize, calc(1.5 * (#{$font-size})));
   text-decoration: var(--sjs-article-font-medium-textDecoration, "none");
   font-family: $font-family;
@@ -80,6 +84,7 @@
 }
 
 @mixin articleDefaultFont {
+  color: $font-questiontitle-color;
   font-size: var(--sjs-article-font-default-fontSize, #{$font-size});
   text-decoration: var(--sjs-article-font-default-textDecoration, "none");
   font-family: $font-family;
@@ -94,7 +99,7 @@
 
 @mixin articleHtml {
   @include articleDefaultFont;
-  color: $font-pagetitle-color;
+
   h1 {
     @include articleXXLargeFont;
   }
