--- a/src/defaultV2-theme/blocks/sd-radio.scss
+++ b/src/defaultV2-theme/blocks/sd-radio.scss
@@ -11,6 +11,7 @@
     transition: background-color $transition-duration;
   }
 }
+
 .sd-radio--checked .sd-radio__decorator:after {
   content: " ";
   display: block;
@@ -19,12 +20,19 @@
   border-radius: 50%;
   background-color: $primary-foreground;
 }
+
 .sd-radio--checked.sd-radio--disabled .sd-radio__decorator:after {
   background-color: $border;
 }
-.sd-radio--checked .sd-radio__control:focus + .sd-radio__decorator:after {
+
+.sd-radio--checked.sd-radio--readonly .sd-radio__decorator:after {
+  background-color: $foreground-dim;
+}
+
+.sd-radio--checked .sd-radio__control:focus+.sd-radio__decorator:after {
   background-color: $primary;
 }
+
 .sd-radio__svg {
   display: none;
 }
