--- a/src/defaultV2-theme/blocks/sd-item.scss
+++ b/src/defaultV2-theme/blocks/sd-item.scss
@@ -19,24 +19,17 @@
   transition: box-shadow $transition-duration, background $transition-duration;
 }
 
-.sd-item--readonly.sd-item--readonly .sd-item__decorator,
-.sd-item__decorator {
-  @include useEditorFontSize;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: calcSize(3);
-  height: calcSize(3);
-  box-sizing: border-box;
+.sd-item--readonly.sd-item--readonly .sd-item__decorator {
   background-color: $background-dark;
-  border: none;
-  flex-shrink: 0;
-  margin-top: calc(calc(multiply(1.5, $font-editorfont-size) - calcSize(3)) / 2);
   box-shadow: none;
   transition: none;
 }
 
-.sd-radio__decorator:after {}
+.sd-item--preview.sd-item--preview .sd-item__decorator {
+  background-color: transparent;
+  box-shadow: none;
+  transition: none;
+}
 
 .sd-item--checked .sd-item__decorator {
   box-shadow: none;
