--- a/src/defaultV2-theme/blocks/sd-radio.scss
+++ b/src/defaultV2-theme/blocks/sd-radio.scss
@@ -29,6 +29,10 @@
   background-color: $foreground-dim;
 }
 
+.sd-radio--checked.sd-radio--preview .sd-radio__decorator:after {
+  background-color: $foreground-dim;
+}
+
 .sd-radio--checked .sd-radio__control:focus+.sd-radio__decorator:after {
   background-color: $primary;
 }
