--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -32,59 +32,66 @@
     fieldset {
       padding-top: calcSize(4.5);
       position: relative;
+
       .sd-rating__min-text {
         position: absolute;
         margin: 0;
-        left:0;
+        left: 0;
         top: 0;
         border: 0;
       }
+
       .sd-rating__max-text {
         position: absolute;
         margin: 0;
-        right:0;
+        right: 0;
         top: 0;
         border: 0;
       }
     }
   }
-  
+
   &.sd-rating--labels-bottom {
     fieldset {
       padding-bottom: calcSize(4.5);
       position: relative;
+
       .sd-rating__min-text {
         position: absolute;
         margin: 0;
-        left:0;
+        left: 0;
         bottom: 0;
         border: 0;
       }
+
       .sd-rating__max-text {
         position: absolute;
         margin: 0;
-        right:0;
+        right: 0;
         bottom: 0;
         border: 0;
       }
     }
   }
+
   &.sd-rating--labels-diagonal {
     fieldset {
       padding-top: calcSize(4.5);
       padding-bottom: calcSize(4.5);
       position: relative;
+
       .sd-rating__min-text {
         position: absolute;
         margin: 0;
-        left:0;
+        left: 0;
         top: 0;
         border: 0;
       }
+
       .sd-rating__max-text {
         position: absolute;
         margin: 0;
-        right:0;
+        right: 0;
         bottom: 0;
         border: 0;
       }
@@ -151,6 +158,30 @@ legend+sv-ng-rating-item+.sd-rating__item {
   background-color: $background-semitransparent;
   border: none;
 }
+
+.sd-rating__item.sd-rating__item--readonly {
+  fill: transparent;
+  background-color: transparent;
+  border: 2px solid $border-inside;
+  box-shadow: none;
+  transform: none;
+
+  .sd-rating__item-text.sd-rating__item-text {
+    color: $foreground-dim-light;
+  }
+}
+
+.sd-rating__item.sd-rating__item--selected.sd-rating__item--readonly {
+  border-color: $foreground-dim;
+
+  .sd-rating__item-text.sd-rating__item-text {
+    color: $foreground-dim;
+  }
+}
+
+.sd-rating__item.sd-rating__item--preview {}
+
+.sd-rating__item.sd-rating__item--selected.sd-rating__item--preview {}
 
 .sd-question--disabled .sd-rating__item-text {
   opacity: 0.25;
